sample call to llama 3.2 running locally

--- a/quantummusic.ipynb
+++ b/quantummusic.ipynb
@@ -5207,6 +5207,43 @@
         "    process_all_files()  # Step 1: Process and store features\n",
         "    trained_model = train_model()  # Step 2: Train the AST-based model"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a9e76d16",
+      "metadata": {},
+      "source": [
+        "## Attempting local llama models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "id": "ed78a0ff",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "model='llama3.2-vision:90b' created_at='2025-02-18T02:01:52.990838Z' done=True done_reason='stop' total_duration=121465478959 load_duration=2096872042 prompt_eval_count=18 prompt_eval_duration=60243000000 eval_count=131 eval_duration=58830000000 message=Message(role='assistant', content=\"The image depicts a baby sitting in a blue tub, with the focus on the baby's face and upper body. The baby has dark hair and eyes, and is looking directly at the camera with a neutral expression. The baby's skin tone appears to be light brown or tan.\\n\\nIn the background, there are various objects that suggest the scene is set in a bathroom or nursery. A white wall with a few framed pictures hangs behind the tub, and a small table or shelf holds some toiletries such as shampoo, conditioner, and lotion. The overall atmosphere of the image is calm and serene, suggesting a peaceful moment between the baby and their caregiver.\", images=None, tool_calls=None)\n"
+          ]
+        }
+      ],
+      "source": [
+        "import ollama\n",
+        "\n",
+        "response = ollama.chat(\n",
+        "    model='llama3.2-vision:90b',\n",
+        "    messages=[{\n",
+        "        'role': 'user',\n",
+        "        'content': 'What is in this image?',\n",
+        "        'images': ['IMG_3310.jpg']\n",
+        "    }]\n",
+        ")\n",
+        "\n",
+        "print(response)"
+      ]
     }
   ],
   "metadata": {
