tweaking the pitch and note extraction slightly

--- a/quantummusic.ipynb
+++ b/quantummusic.ipynb
@@ -601,10 +601,66 @@
         "        deviations.append(dev)\n",
         "    return note_names, note_freqs, deviations\n",
         "\n",
+        "def estimate_base_pitch_from_contour(pitches, voiced_flags):\n",
+        "    \"\"\"\n",
+        "    Estimate the base pitch (e.g., tanpura / drone) by building a histogram\n",
+        "    of all voiced pitches and selecting the peak bin.\n",
+        "    \"\"\"\n",
+        "    valid_pitches = pitches[voiced_flags & ~np.isnan(pitches)]\n",
+        "    if len(valid_pitches) == 0:\n",
+        "        return None\n",
         "\n",
-        "###########################################\n",
-        "# 22 Śrutis Microtonal Classification\n",
-        "###########################################\n",
+        "    hist, bin_edges = np.histogram(\n",
+        "        valid_pitches,\n",
+        "        bins=200,\n",
+        "        range=(valid_pitches.min(), valid_pitches.max())\n",
+        "    )\n",
+        "    max_bin_idx = np.argmax(hist)\n",
+        "    base_pitch = 0.5 * (bin_edges[max_bin_idx] + bin_edges[max_bin_idx + 1])\n",
+        "    return base_pitch\n",
+        "\n",
+        "\n",
+        "def map_pitches_with_librosa_functions(pitches, base_pitch=None):\n",
+        "    \"\"\"\n",
+        "    Map each pitch in Hz to:\n",
+        "      1) Western note name (e.g. 'C4', 'F#3', etc.)\n",
+        "      2) Standard Hindustani note (e.g. 'Sa_4')\n",
+        "      using librosa.hz_to_note and hz_to_svara_h.\n",
+        "\n",
+        "    Returns (western_notes, hindustani_notes).\n",
+        "    \"\"\"\n",
+        "    if base_pitch is None or np.isnan(base_pitch):\n",
+        "        base_pitch = 220.0  # fallback reference\n",
+        "\n",
+        "    pitches_arr = np.array(pitches, dtype=float)\n",
+        "    valid_mask = (~np.isnan(pitches_arr)) & (pitches_arr > 0)\n",
+        "\n",
+        "    # Temporarily set invalid pitches to np.nan so librosa ignores them\n",
+        "    pitches_for_note = np.copy(pitches_arr)\n",
+        "    pitches_for_note[~valid_mask] = np.nan\n",
+        "\n",
+        "    # 1) Western notes (like 'C3', 'F#4', etc.)\n",
+        "    western_notes_raw = librosa.hz_to_note(pitches_for_note)\n",
+        "\n",
+        "    # 2) Hindustani notes\n",
+        "    #    show_octave=True to get e.g. 'Sa_4'\n",
+        "    hindustani_notes_raw = librosa.hz_to_svara_h(\n",
+        "        pitches_for_note, sa=base_pitch, show_octave=True\n",
+        "    )\n",
+        "        # Convert back to Python lists, substituting None for invalid\n",
+        "    western_notes = []\n",
+        "    hindustani_notes = []\n",
+        "    for i in range(len(pitches_arr)):\n",
+        "        if not valid_mask[i]:\n",
+        "            western_notes.append(None)\n",
+        "            hindustani_notes.append(None)\n",
+        "        else:\n",
+        "            western_notes.append(western_notes_raw[i])\n",
+        "            hindustani_notes.append(hindustani_notes_raw[i])\n",
+        "\n",
+        "    return western_notes, hindustani_notes\n",
+        "\n",
+        "\n",
         "\n",
         "###########################################\n",
         "# 22 Śrutis Microtonal Classification\n",
@@ -4139,7 +4195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "classical-code",
       "metadata": {},
       "outputs": [],
@@ -4186,13 +4242,37 @@
         "    harmonic_audio = remove_percussive_components(clean_audio, sr, margin=(1.0, 1.0))\n",
         "    # now to pass this everywhere \n",
         "    \n",
-        "\n",
         "    # 3. pitch\n",
-        "    times, pitches, confidences = extract_pitch_contour(harmonic_audio, sr)\n",
+        "    times, pitches, voiced_flags, confidences = extract_pitch_contour(harmonic_audio, sr)\n",
+        "\n",
+        "    # Estimate the base pitch (drone)\n",
+        "    base_pitch = estimate_base_pitch_from_contour(pitches, voiced_flags)\n",
+        "\n",
+        "    # Map to standard notes\n",
+        "    western_notes, hindustani_notes = map_pitches_with_librosa_functions(\n",
+        "        pitches, base_pitch=base_pitch\n",
+        "    )\n",
+        "\n",
+        "\n",
         "\n",
         "    # 4. map pitch => note\n",
         "    # note_names, note_freqs, deviations = map_pitches_to_notes(pitches)\n",
-        "    note_names, note_freqs, deviations, sruti_labels = map_pitches_to_notes_22sruti(pitches)\n",
+        "    # note_names, note_freqs, deviations, sruti_labels = map_pitches_to_notes_22sruti(pitches)\n",
+        "    # Map to 22-sruti classification (the user's microtonal logic)\n",
+        "    sruti_labels = map_pitches_to_notes_22sruti(pitches, tonic=base_pitch if base_pitch else 240.0)\n",
+        "\n",
+        "\n",
+        "    analysis_dict[\"pyin_pitch_contour\"] = {\n",
+        "        \"times\": times.tolist(),\n",
+        "        \"pitches\": pitches.tolist(),\n",
+        "        \"voiced_flags\": voiced_flags.tolist(),\n",
+        "        \"confidences\": confidences.tolist(),\n",
+        "        \"base_pitch\": float(base_pitch) if base_pitch else None,\n",
+        "        \"western_notes\": western_notes,\n",
+        "        \"hindustani_notes_standard\": hindustani_notes,\n",
+        "        \"hindustani_notes_22sruti\": sruti_labels\n",
+        "    }\n",
+        "\n",
         "\n",
         "\n",
         "    # 5. stats\n",
@@ -4302,6 +4382,30 @@
         "        \"advanced_note_features\": advanced_note_features,\n",
         "        \"advanced_vocal_stats\": advanced_vocal_stats  # New key with aggregated advanced features\n",
         "    }\n",
+        "\n",
+        "\n",
+        "    # 7) Align with existing time_matrix_small, assuming it uses the same hop_length\n",
+        "    #    and has len(time_matrix_small) == number of frames for the same analysis window.\n",
+        "    time_matrix_small = analysis_dict.get(\"time_matrix_small\", [])\n",
+        "    if len(time_matrix_small) == len(times):\n",
+        "        # Direct index-based alignment\n",
+        "        for i, row in enumerate(time_matrix_small):\n",
+        "            row[\"pyin_pitch\"] = float(pitches[i]) if not np.isnan(pitches[i]) else None\n",
+        "            row[\"pyin_western_note\"] = western_notes[i]\n",
+        "            row[\"pyin_hindustani_note_standard\"] = hindustani_notes[i]\n",
+        "            row[\"pyin_hindustani_note_22sruti\"] = sruti_labels[i]\n",
+        "    else:\n",
+        "        # If the lengths don't match, do nearest-time alignment\n",
+        "        for row in time_matrix_small:\n",
+        "            t_s = row.get(\"time_s\", 0.0)\n",
+        "            idx = np.argmin(np.abs(times - t_s))\n",
+        "            row[\"pyin_pitch\"] = float(pitches[idx]) if not np.isnan(pitches[idx]) else None\n",
+        "            row[\"pyin_western_note\"] = western_notes[idx]\n",
+        "            row[\"pyin_hindustani_note_standard\"] = hindustani_notes[idx]\n",
+        "            row[\"pyin_hindustani_note_22sruti\"] = sruti_labels[idx]\n",
+        "\n",
+        "    analysis_dict[\"time_matrix_small\"] = time_matrix_small\n",
+        "\n",
         "\n",
         "\n",
         "    ########################################\n",
