suppressing plt.show for performance optimization

--- a/quantummusic.ipynb
+++ b/quantummusic.ipynb
@@ -2853,7 +2853,8 @@
         "    plt.legend()\n",
         "    pitch_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_pitch_note_freq.png\")\n",
         "    plt.savefig(pitch_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    #------------------------------------------------------------\n",
         "    # 2) Spectral Flatness & Transition Score\n",
@@ -2866,7 +2867,8 @@
         "    plt.legend()\n",
         "    spectral_flat_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_spectral_flatness_transition.png\")\n",
         "    plt.savefig(spectral_flat_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    #------------------------------------------------------------\n",
         "    # 3) Praat HNR\n",
@@ -2879,7 +2881,8 @@
         "    plt.legend()\n",
         "    praat_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_praat_hnr.png\")\n",
         "    plt.savefig(praat_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    #------------------------------------------------------------\n",
         "    # Sruti Overlay\n",
@@ -2892,7 +2895,8 @@
         "    plt.title(\"22-Sruti Overlay\")\n",
         "    sruti_overlay_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_sruti_overlay.png\")\n",
         "    plt.savefig(sruti_overlay_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    #------------------------------------------------------------\n",
         "    # If we have audio_data & sr => advanced spectrogram features\n",
@@ -2908,7 +2912,8 @@
         "        plt.colorbar(format='%+2.0f dB')\n",
         "        spec_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_log_spectrogram.png\")\n",
         "        plt.savefig(spec_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # MFCC (remove \"60\")\n",
         "        mfcc_data = librosa.feature.mfcc(y=audio_data, sr=sr, n_mfcc=60, n_fft=n_fft_local)\n",
@@ -2918,7 +2923,8 @@
         "        plt.colorbar()\n",
         "        mfcc_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_mfcc.png\")\n",
         "        plt.savefig(mfcc_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # Chromagram\n",
         "        chroma_data = librosa.feature.chroma_stft(y=audio_data, sr=sr, n_fft=n_fft_local)\n",
@@ -2928,7 +2934,8 @@
         "        plt.colorbar()\n",
         "        chroma_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_chromagram.png\")\n",
         "        plt.savefig(chroma_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # chunk-based lines for advanced features\n",
         "\n",
@@ -2940,7 +2947,8 @@
         "        plt.legend()\n",
         "        zcr_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_zcr.png\")\n",
         "        plt.savefig(zcr_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # Spectral Centroid\n",
         "        plt.figure()\n",
@@ -2950,7 +2958,8 @@
         "        plt.legend()\n",
         "        centroid_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_spectral_centroid.png\")\n",
         "        plt.savefig(centroid_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # Rolloff\n",
         "        plt.figure()\n",
@@ -2960,7 +2969,8 @@
         "        plt.legend()\n",
         "        rolloff_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_spectral_rolloff.png\")\n",
         "        plt.savefig(rolloff_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # Bandwidth\n",
         "        plt.figure()\n",
@@ -2970,7 +2980,8 @@
         "        plt.legend()\n",
         "        bandwidth_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_spectral_bandwidth.png\")\n",
         "        plt.savefig(bandwidth_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # RMS(dB)\n",
         "        plt.figure()\n",
@@ -2980,7 +2991,8 @@
         "        plt.legend()\n",
         "        rms_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_rms_db.png\")\n",
         "        plt.savefig(rms_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # LUFS\n",
         "        plt.figure()\n",
@@ -2990,7 +3002,8 @@
         "        plt.legend()\n",
         "        lufs_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_lufs.png\")\n",
         "        plt.savefig(lufs_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # Tempo (512)\n",
         "        plt.figure()\n",
@@ -3000,7 +3013,8 @@
         "        plt.legend()\n",
         "        tempo_small_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_tempo_small.png\")\n",
         "        plt.savefig(tempo_small_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "        # Medium & Large Tempo\n",
         "        plt.figure()\n",
@@ -3014,7 +3028,8 @@
         "        plt.legend()\n",
         "        tempo_big_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_tempo_big.png\")\n",
         "        plt.savefig(tempo_big_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "\n",
         "    #------------------------------------------------------------\n",
         "    # 4) Advanced vocal features figure (split subplots as well)\n",
@@ -3028,7 +3043,8 @@
         "    plt.legend()\n",
         "    jitter_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_jitter.png\")\n",
         "    plt.savefig(jitter_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    # Shimmer\n",
         "    plt.figure()\n",
@@ -3039,7 +3055,8 @@
         "    plt.legend()\n",
         "    shimmer_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_shimmer.png\")\n",
         "    plt.savefig(shimmer_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    # Formants\n",
         "    plt.figure()\n",
@@ -3052,7 +3069,8 @@
         "    plt.legend()\n",
         "    formant_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_formants.png\")\n",
         "    plt.savefig(formant_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    # Vibrato Extent\n",
         "    plt.figure()\n",
@@ -3063,7 +3081,8 @@
         "    plt.legend()\n",
         "    vib_ext_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_vibrato_extent.png\")\n",
         "    plt.savefig(vib_ext_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    # Vibrato Rate\n",
         "    plt.figure()\n",
@@ -3074,7 +3093,8 @@
         "    plt.legend()\n",
         "    vib_rate_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_vibrato_rate.png\")\n",
         "    plt.savefig(vib_rate_filename)\n",
-        "    plt.show()\n",
+        "    #plt.show()\n",
+        "    plt.close()\n",
         "\n",
         "    # If we have note attack data:\n",
         "    if analysis_dict and \"advanced_note_features\" in analysis_dict:\n",
@@ -3107,14 +3127,16 @@
         "            plt.text(0.5, 0.5, \"No Attack Data\", ha='center', va='center')\n",
         "        attack_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_note_attack_time.png\")\n",
         "        plt.savefig(attack_filename)\n",
-        "        plt.show()\n",
+        "        #plt.show()\n",
+        "        plt.close()\n",
         "    else:\n",
         "        plt.figure()\n",
         "        plt.text(0.5, 0.5, \"No Attack Data\", ha='center', va='center')\n",
         "        plt.title(\"Note Attack Time over Time\")\n",
         "        attack_filename = os.path.join(OUTPUT_DIR, f\"{base_name}_note_attack_time.png\")\n",
         "        plt.savefig(attack_filename)\n",
-        "        plt.show()"
+        "        #plt.show()\n",
+        "        plt.close()"
       ]
     },
     {
