split code into multiple files, run via script

--- a/quantummusic.ipynb
+++ b/quantummusic.ipynb
@@ -3899,7 +3899,7 @@
         "    final_entropy = measurement_distribution_entropy(final_counts)\n",
         "\n",
         "    # 5) Optionally plot\n",
-        "    plot_quantum_counts(final_counts)\n",
+        "    #plot_quantum_counts(final_counts)\n",
         "\n",
         "    # 6) Store\n",
         "    analysis_dict[\"quantum_analysis_variational\"] = {\n",
@@ -4179,16 +4179,16 @@
         "    \"\"\"\n",
         "    Plots the measurement distribution.\n",
         "    \"\"\"\n",
-        "    outcomes = list(counts.keys())\n",
-        "    frequencies = list(counts.values())\n",
-        "    fig, ax = plt.subplots(figsize=(7, 4))\n",
-        "    ax.bar(outcomes, frequencies, color='skyblue')\n",
-        "    ax.set_xlabel(\"Measurement Outcome\")\n",
-        "    ax.set_ylabel(\"Counts\")\n",
-        "    ax.set_title(\"Quantum Measurement Distribution\")\n",
-        "    plt.xticks(rotation=45)\n",
-        "    plt.tight_layout()\n",
-        "    plt.show()\n",
+        "    #outcomes = list(counts.keys())\n",
+        "    #frequencies = list(counts.values())\n",
+        "    #fig, ax = plt.subplots(figsize=(7, 4))\n",
+        "    #ax.bar(outcomes, frequencies, color='skyblue')\n",
+        "    #ax.set_xlabel(\"Measurement Outcome\")\n",
+        "    #ax.set_ylabel(\"Counts\")\n",
+        "    #ax.set_title(\"Quantum Measurement Distribution\")\n",
+        "    #plt.xticks(rotation=45)\n",
+        "    #plt.tight_layout()\n",
+        "    #plt.show()\n",
         "\n",
         "\n",
         "def run_and_store_quantum_analysis(analysis_dict):\n",
@@ -4457,9 +4457,7 @@
         "\n",
         "    # ====== NEW QUANTUM STEP ======\n",
         "    analysis_dict = run_and_store_quantum_analysis(analysis_dict)\n",
-        "\n",
-        "\n",
-        "    analysis_dict = run_and_store_variational_analysis(analysis_dict)\n",
+        "    #analysis_dict = run_and_store_variational_analysis(analysis_dict)\n",
         "\n",
         "    # ====== END NEW QUANTUM STEP ======\n",
         "\n",
