--- a/mlmodel.ipynb
+++ b/mlmodel.ipynb
@@ -345,6 +345,194 @@
     "# if __name__ == \"__main__\":\n",
     "#     trained_model = train_model()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def parse_raga_and_quality(fname: str):\n",
+    "    \"\"\"\n",
+    "    Example filename: 'Bhairavi5VenkateshKumar_500s_520s_Unknown.wav'\n",
+    "    Returns raga='Bhairavi', quality=5\n",
+    "    \"\"\"\n",
+    "    # Strip any extension\n",
+    "    base = fname.replace(\".wav\", \"\")\n",
+    "    # Regex: one or more letters, followed by a single digit (1-5)\n",
+    "    match = re.match(r\"^([A-Za-z]+)([1-5])(.*)\", base)\n",
+    "    if not match:\n",
+    "        # fallback\n",
+    "        return None, None\n",
+    "\n",
+    "    raga = match.group(1)\n",
+    "    quality_str = match.group(2)\n",
+    "    quality = int(quality_str)  # convert \"5\" -> 5\n",
+    "    return raga, quality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from PIL import Image\n",
+    "import torch\n",
+    "import torchvision.transforms as T\n",
+    "\n",
+    "transform_img = T.Compose([\n",
+    "    T.Resize((224, 224)),  # example size\n",
+    "    T.ToTensor()\n",
+    "])\n",
+    "\n",
+    "def load_image_as_tensor(image_path: str):\n",
+    "    if not os.path.exists(image_path):\n",
+    "        # Could return None or a zero-tensor placeholder\n",
+    "        return None\n",
+    "    img = Image.open(image_path).convert(\"RGB\")\n",
+    "    return transform_img(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_training_data_v2():\n",
+    "    db = QuantumMusicDBFetchOnly()\n",
+    "    rows = db.fetch_all_analysis_data()\n",
+    "    db.close()\n",
+    "    if not rows:\n",
+    "        print(\"No data found in DB.\")\n",
+    "        return None\n",
+    "\n",
+    "    # We’ll gather the following lists for the dataset:\n",
+    "    #  - images_mfcc, images_log, ...\n",
+    "    #  - scalar_feats (from results + dynamics_summary + advanced_vocal_stats)\n",
+    "    #  - quantum_feats\n",
+    "    #  - labels_raga, labels_quality (or you might combine them)\n",
+    "\n",
+    "    images_mfcc = []\n",
+    "    images_log = []\n",
+    "    # Similarly for jitter, shimmer, formant, vibrato if desired\n",
+    "    # images_jitter = []\n",
+    "    # images_shimmer = []\n",
+    "    # ...\n",
+    "    \n",
+    "    scalar_feats = []\n",
+    "    quantum_feats = []\n",
+    "    labels_raga = []\n",
+    "    labels_quality = []\n",
+    "\n",
+    "    for (analysis_data,) in rows:\n",
+    "        # Grab filename from the DB\n",
+    "        wav_fname = analysis_data[\"file_name\"]  # e.g. 'Bhairavi5VenkateshKumar_500s_520s_Unknown.wav'\n",
+    "        base_no_ext = wav_fname.replace(\".wav\", \"\")\n",
+    "        \n",
+    "        # 1) Parse raga and quality from file name\n",
+    "        raga, quality = parse_raga_and_quality(wav_fname)\n",
+    "        if raga is None or quality is None:\n",
+    "            # If not parseable, skip or handle somehow\n",
+    "            continue\n",
+    "        \n",
+    "        labels_raga.append(raga)\n",
+    "        labels_quality.append(quality)\n",
+    "\n",
+    "        # 2) Precomputed images\n",
+    "        #    data/analysisoutput/<base_no_ext>_mfcc.png\n",
+    "        mfcc_path = os.path.join(\"data\", \"analysisoutput\", f\"{base_no_ext}_mfcc.png\")\n",
+    "        log_path  = os.path.join(\"data\", \"analysisoutput\", f\"{base_no_ext}_log_spectrogram.png\")\n",
+    "        \n",
+    "        mfcc_img = load_image_as_tensor(mfcc_path)\n",
+    "        log_img  = load_image_as_tensor(log_path)\n",
+    "        # etc. for jitter, shimmer, ...\n",
+    "        \n",
+    "        images_mfcc.append(mfcc_img if mfcc_img is not None else torch.zeros((3,224,224)))\n",
+    "        images_log.append(log_img  if log_img  is not None else torch.zeros((3,224,224)))\n",
+    "\n",
+    "        # 3) Scalar features from \"results\" + \"dynamics_summary\" + possibly \"advanced_vocal_stats\"\n",
+    "        #    You can pick whichever ones you want. For example:\n",
+    "        res = analysis_data.get(\"results\", {})\n",
+    "        dyn = analysis_data.get(\"dynamics_summary\", {})\n",
+    "        adv = analysis_data.get(\"quantum_analysis\", {}).get(\"advanced_stats\", {})\n",
+    "        \n",
+    "        avg_dev = res.get(\"average_dev_cents\", 0.0)\n",
+    "        std_dev = res.get(\"std_dev_cents\", 0.0)\n",
+    "        avg_hnr = res.get(\"avg_praat_hnr\", 0.0)\n",
+    "        avg_tnr = res.get(\"avg_tnr\", 0.0)\n",
+    "\n",
+    "        # from dynamics_summary\n",
+    "        rms_db_stats = dyn.get(\"rms_db\", {})\n",
+    "        mean_rms_db  = rms_db_stats.get(\"mean\", 0.0)\n",
+    "        lufs_stats   = dyn.get(\"lufs\", {})\n",
+    "        mean_lufs    = lufs_stats.get(\"mean\", 0.0)\n",
+    "\n",
+    "        # from advanced_vocal_stats (inside advanced_stats in quantum_analysis or similar)\n",
+    "        avg_jitter   = adv.get(\"avg_jitter\", 0.0)\n",
+    "        avg_shimmer  = adv.get(\"avg_shimmer\", 0.0)\n",
+    "        avg_vibrato  = adv.get(\"avg_vibrato_rate\", 0.0)\n",
+    "        avg_formant  = adv.get(\"avg_F1\", 0.0)  # or you can use multiple formants\n",
+    "\n",
+    "        # Combine them into one scalar vector\n",
+    "        scalars = [\n",
+    "            avg_dev, std_dev, avg_hnr, avg_tnr,\n",
+    "            mean_rms_db, mean_lufs,\n",
+    "            avg_jitter, avg_shimmer, avg_vibrato, avg_formant\n",
+    "        ]\n",
+    "        scalar_feats.append(scalars)\n",
+    "\n",
+    "        # 4) Quantum features\n",
+    "        #    e.g. angles + measurement_counts => distribution\n",
+    "        quantum_dict = analysis_data.get(\"quantum_analysis\", {})\n",
+    "        angles = quantum_dict.get(\"scaled_angles\", [])\n",
+    "        \n",
+    "        # example: put up to 10 angles\n",
+    "        max_len = 10\n",
+    "        angle_arr = np.zeros(max_len, dtype=np.float32)\n",
+    "        for i in range(min(max_len, len(angles))):\n",
+    "            angle_arr[i] = angles[i]\n",
+    "\n",
+    "        # If you need distribution from measurement_counts\n",
+    "        counts_d = quantum_dict.get(\"measurement_counts\", {})\n",
+    "        dist_vec = convert_counts_to_probs_feature(counts_d, max_bits=5)  # shape(32,)\n",
+    "\n",
+    "        # combine angle_arr + dist_vec => shape (42,) if you do so\n",
+    "        combined_q = np.concatenate([angle_arr, dist_vec], axis=0)\n",
+    "        quantum_feats.append(combined_q)\n",
+    "\n",
+    "    # Now convert your lists into arrays or Tensors as desired\n",
+    "    # For images, you might store them as a list of Tensors, or keep them on disk\n",
+    "    images_mfcc = torch.stack(images_mfcc)  # shape(N, 3, 224, 224)\n",
+    "    images_log  = torch.stack(images_log)\n",
+    "\n",
+    "    scalar_feats = np.array(scalar_feats, dtype=np.float32)\n",
+    "    quantum_feats = np.array(quantum_feats, dtype=np.float32)\n",
+    "\n",
+    "    # If you want to encode raga as an integer label:\n",
+    "    # e.g. map each unique raga to an integer\n",
+    "    all_ragas = list(set(labels_raga))\n",
+    "    raga_to_idx = {r: i for i, r in enumerate(sorted(all_ragas))}\n",
+    "    labels_raga_idx = [raga_to_idx[r] for r in labels_raga]\n",
+    "\n",
+    "    # ‘quality’ is already numeric (1..5). You might keep it as is or shift to 0..4\n",
+    "    labels_quality_arr = np.array(labels_quality, dtype=np.int64)  # shape(N,)\n",
+    "\n",
+    "    return {\n",
+    "        \"images_mfcc\": images_mfcc,\n",
+    "        \"images_log\": images_log,\n",
+    "        \"scalar_feats\": scalar_feats,\n",
+    "        \"quantum_feats\": quantum_feats,\n",
+    "        \"label_raga_str\": labels_raga,      # string labels\n",
+    "        \"label_raga_idx\": np.array(labels_raga_idx, dtype=np.int64),\n",
+    "        \"label_quality\": labels_quality_arr,\n",
+    "        \"raga_to_idx\": raga_to_idx\n",
+    "    }"
+   ]
   }
  ],
  "metadata": {
