--- a/quantummusic.ipynb
+++ b/quantummusic.ipynb
@@ -328,10 +328,10 @@
         "    Handles connection to the PostgreSQL database and basic CRUD operations.\n",
         "    \"\"\"\n",
         "    def __init__(self, db_name=DB_NAME, host=DB_HOST, user=DB_USER, password=DB_PASSWORD):\n",
-        "        self.db_name = db_name\n",
-        "        self.host = host\n",
-        "        self.user = user\n",
-        "        self.password = password\n",
+        "        self.db_name = \"quantummusic\"\n",
+        "        self.host = \"localhost\"\n",
+        "        self.user = \"postgres\"\n",
+        "        self.password = \"postgres\"\n",
         "        self.conn = None\n",
         "        self.connect()\n",
         "\n",
@@ -3257,7 +3257,7 @@
         "def generate_detailed_feedback(analysis_dict):\n",
         "    \"\"\"\n",
         "    Loop over 'time_matrix_small' and produce chunk-level feedback items in a structured format.\n",
-        "    E.g. a list of:\n",
+        "    E.g. a lis of:\n",
         "      {\n",
         "        \"start_time\": float,\n",
         "        \"end_time\": float,\n",
@@ -3616,9 +3616,9 @@
       "outputs": [],
       "source": [
         "# Configure logging to show only INFO-level messages.\n",
-        "# logging.basicConfig(level=logging.INFO,\n",
-        "#                    format='[%(levelname)s] %(asctime)s - %(message)s',\n",
-        "#                    datefmt='%H:%M:%S')\n",
+        "logging.basicConfig(level=logging.INFO,\n",
+        "                    format='[%(levelname)s] %(asctime)s - %(message)s',\n",
+        "                    datefmt='%H:%M:%S')\n",
         "\n",
         "\n",
         "\n",
@@ -3899,7 +3899,7 @@
         "    final_entropy = measurement_distribution_entropy(final_counts)\n",
         "\n",
         "    # 5) Optionally plot\n",
-        "    #plot_quantum_counts(final_counts)\n",
+        "    plot_quantum_counts(final_counts)\n",
         "\n",
         "    # 6) Store\n",
         "    analysis_dict[\"quantum_analysis_variational\"] = {\n",
@@ -4160,8 +4160,8 @@
         "    qc.measure(range(num_qubits), range(num_qubits))\n",
         "\n",
         "    # Print the circuit\n",
-        "    #logging.info(\"Quantum circuit (complex version):\")\n",
-        "    #logging.info(\"\\n\" + str(qc.draw(output='text')))\n",
+        "    logging.info(\"Quantum circuit (complex version):\")\n",
+        "    logging.info(\"\\n\" + str(qc.draw(output='text')))\n",
         "\n",
         "    # Execute\n",
         "    backend = AerSimulator()\n",
@@ -4672,8 +4672,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# result = grade_single_file(\"rohan3.wav\")\n",
-        "# result  # Uncomment to see full analysis dictionary"
+        "result = grade_single_file(\"bhoop3rohan.wav\")\n",
+        "#result  # Uncomment to see full analysis dictionary"
       ]
     },
     {
