Added a new file with the final script, changing the constants and heuristics slightly.

--- a/quantummusic.ipynb
+++ b/quantummusic.ipynb
@@ -189,15 +189,15 @@
         "        return \"unknown\"\n",
         "    dev_abs = abs(dev_cents)\n",
         "    if dev_abs < 10:\n",
-        "        return \"perfect\"\n",
-        "    elif dev_abs < 30:\n",
         "        return \"good\"\n",
-        "    elif dev_abs < 50:\n",
+        "    elif dev_abs < 30:\n",
         "        return \"fair\"\n",
-        "    elif dev_abs < 100:\n",
+        "    elif dev_abs < 50:\n",
         "        return \"poor\"\n",
-        "    else:\n",
+        "    elif dev_abs < 100:\n",
         "        return \"very poor\"\n",
+        "    else:\n",
+        "        return \"completely missing the note\"\n",
         "\n",
         "\n",
         "def classify_tone_to_noise(sf_val):\n",
