prior to making real changes to mlmodel

--- a/mlmodel.ipynb
+++ b/mlmodel.ipynb
@@ -343,15 +343,9 @@
     "\n",
     "# Example usage if you want to run it directly:\n",
     "# if __name__ == \"__main__\":\n",
-    "#     trained_model = train_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     trained_model = train_model()\n",
+    "\n",
+    "\n",
     "import re\n",
     "\n",
     "def parse_raga_and_quality(fname: str):\n",
@@ -370,15 +364,10 @@
     "    raga = match.group(1)\n",
     "    quality_str = match.group(2)\n",
     "    quality = int(quality_str)  # convert \"5\" -> 5\n",
-    "    return raga, quality"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return raga, quality\n",
+    "\n",
+    "\n",
+    "\n",
     "import os\n",
     "from PIL import Image\n",
     "import torch\n",
@@ -394,15 +383,10 @@
     "        # Could return None or a zero-tensor placeholder\n",
     "        return None\n",
     "    img = Image.open(image_path).convert(\"RGB\")\n",
-    "    return transform_img(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return transform_img(img)\n",
+    "\n",
+    "\n",
+    "\n",
     "def fetch_training_data_v2():\n",
     "    db = QuantumMusicDBFetchOnly()\n",
     "    rows = db.fetch_all_analysis_data()\n",
