ml model and compare changes

--- a/mlmodel.ipynb
+++ b/mlmodel.ipynb
@@ -9,36 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using MPS device for GPU acceleration on Apple Silicon.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/98/ykbpmmjd0pdf8zgd8bc1hhmr0000gn/T/ipykernel_9663/2957993595.py:571: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  checkpoint = torch.load(model_path, map_location=HYPERPARAMS[\"DEVICE\"])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to database quantummusic. (fetch-only)\n",
-      "Database connection closed.\n",
-      "Inference for Record ID=2022:\n",
-      "  True raga=None, True quality=None\n",
-      "  Predicted raga=Bhoop, predicted quality=5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
@@ -135,13 +108,32 @@
     "            self.conn.close()\n",
     "            print(\"Database connection closed.\")\n",
     "\n",
-    "    def fetch_limited_analysis_data(self, limit=10000): #all records, given that we have only about 1700\n",
+    "    def fetch_limited_analysis_data(self, limit=42): #all records, given that we have only about 1700\n",
     "        \"\"\"\n",
     "        Read a fixed 'limit' number of rows from 'audio_analysis' table.\n",
     "        Default limit=1000 now.\n",
     "        \"\"\"\n",
     "        with self.conn.cursor() as cur:\n",
-    "            query = f\"SELECT id, analysis_data FROM audio_analysis LIMIT {limit}\"\n",
+    "            #query = f\"SELECT id, analysis_data FROM audio_analysis LIMIT {limit}\"\n",
+    "            query = \"\"\"\n",
+    "                WITH cte AS (\n",
+    "                    SELECT\n",
+    "                        id,\n",
+    "                        analysis_data,\n",
+    "                        -- Extract the digits as an integer\n",
+    "                        substring(file_name FROM '\\\\d+')::int AS file_num,\n",
+    "                        -- Assign a random order within each file_num group\n",
+    "                        ROW_NUMBER() OVER (\n",
+    "                            PARTITION BY substring(file_name FROM '\\\\d+')::int\n",
+    "                            ORDER BY random()\n",
+    "                        ) AS rn\n",
+    "                    FROM audio_analysis\n",
+    "                    WHERE substring(file_name FROM '\\\\d+')::int IN (2, 3, 4, 5)\n",
+    "                )\n",
+    "                SELECT id, analysis_data\n",
+    "                FROM cte\n",
+    "                WHERE rn <= 42;\n",
+    "                \"\"\"\n",
     "            cur.execute(query)\n",
     "            rows = cur.fetchall()\n",
     "        return rows\n",
@@ -717,7 +709,7 @@
     "    #model, raga_to_idx = train_model_v2()\n",
     "\n",
     "    # 2) Later or in a separate session:\n",
-    "    run_inference_on_persisted_model(2022, \"data/modeloutput/trained_model_10_all.pt\")"
+    "    run_inference_on_persisted_model(361, \"data/modeloutput/trained_model_42_balanced.pt\")"
    ]
   }
  ],
